--- a/pages/home.htm
+++ b/pages/home.htm
@@ -17,7 +17,7 @@ is_hidden = 0
 <div class="uk-position-relative">
     <div class="uk-height-large uk-background-cover uk-light uk-flex" uk-parallax="bgy: -400; media: @s" style="background-image: url({{'assets/images/bg01.jpg'| theme}});">
         <div class="uk-container uk-width-3-4@m uk-text-center uk-margin-auto-vertical uk-animation-scale-up">
-            <h1>Digistlab merupakan lab reseach & development yang menghasilkan produk dan layanan berbasis teknologi informasi</h1>
+            <h1>Digistlab merupakan lab research & development yang menghasilkan produk dan layanan berbasis teknologi informasi</h1>
             <a class="uk-button tm-button-primary uk-margin-small-right" href="{{'/produk-dan-layanan'|app}}">Produk dan layanan</a>
             <a class="uk-link" href="{{'/tentang-digistlab'|app}}">Tentang Digistlab</a>
         </div>
