--- a/pages/tentang-digistlab.htm
+++ b/pages/tentang-digistlab.htm
@@ -15,7 +15,7 @@ is_hidden = 0
 </div>
 <div class="uk-section uk-section-default">
     <div class="uk-container">
-        <h1 class="uk-heading-bullet uk-text-center">Behine the scene</h1>
+        <h1 class="uk-heading-bullet uk-text-center">Behind the scene</h1>
         <div class="uk-flex-middle uk-child-width-1-2@s uk-text-center" uk-grid>
             <div>
                 <img width="150" height="150" class="uk-border-circle" data-src="{{'pizaini.jpg'|media}}" alt="Image" uk-img>
