--- a/pages/home.htm
+++ b/pages/home.htm
@@ -92,19 +92,19 @@ is_hidden = 0
         <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid uk-scrollspy="cls:uk-animation-fade; target: > div; delay: 500;">
             <div>
                 <div class="uk-border-rounded uk-card uk-card-hover uk-card-body">
-                    <h3 class="uk-card-title">Custom produk</h3>
+                    <h3 class="uk-card-title"><span uk-icon="icon: cog; ratio: 1.5"></span> Custom produk</h3>
                     <p>Penyesuaian (custom) produk dari Digistlab untuk digunakan pada organisasi Anda</p>
                 </div>
             </div>
             <div>
                 <div class="uk-border-rounded uk-card uk-card-hover uk-card-body">
-                    <h3 class="uk-card-title">Transfer knowladge</h3>
+                    <h3 class="uk-card-title"><span uk-icon="icon: expand; ratio: 1.5"></span> Transfer knowladge</h3>
                     <p>Memberikan pelatihan dan transfer knowladge tentang produk dan teknologi yang digunakan dalam produk Digistlab</p>
                 </div>
             </div>
             <div>
                 <div class="uk-border-rounded uk-card uk-card-hover uk-card-body">
-                    <h3 class="uk-card-title">Request/permintaan</h3>
+                    <h3 class="uk-card-title"><span uk-icon="icon: happy; ratio: 1.5"></span> Request/permintaan</h3>
                     <p>Digistlab bersedia mengembangkan produk dan layanan berdasarkan permintaan/request tertentu</p>
                 </div>
             </div>
