--- a/pages/blog.htm
+++ b/pages/blog.htm
@@ -1,50 +1,23 @@
 title = "Blog"
 url = "/blog/:slug?"
-layout = "default"
-description = "Blog artikel"
+layout = "blog"
+description = "Blog"
 meta_title = "Blog"
-meta_description = "Blog artikel"
+meta_description = "Blog"
 is_hidden = 0
-
-[blogPost]
-slug = "{{ :slug }}"
-categoryPage = "blog"
 
 [blogPosts]
 pageNumber = "{{ :page }}"
 postsPerPage = 10
 noPostsMessage = "No posts found"
 sortOrder = "published_at desc"
-categoryPage = 404
-postPage = 404
+categoryPage = "blog"
+postPage = "blog"
 
-[blogCategories]
+[blogPost]
 slug = "{{ :slug }}"
-displayEmpty = 0
 categoryPage = "blog/category"
 ==
-<?php
-function onEnd()
-{
-    // Optional - set the page title to the post title
-    if ($this->post)
-        $this->page->title = $this->post->title;
-}
-?>
-==
 <div class="uk-section">
-    <div class="uk-container">
-        <!--{% if not slug %}-->
-            <!--{% if post %}-->
-                <!--{%put mata_og%}-->
-                <!--<meta property="og:title" content="{{ this.post.meta_title|default(this.post.title) }}" />-->
-                <!--<meta property="og:description" content="{{ this.post.meta_description|default(this.post.description) }}" />-->
-                <!--<meta property="og:image" content="https://www.hynusantara.com/content/images/2019/01/be-creative-creative-creativity-256514-2.jpg" />-->
-                <!--{%endput%}-->
-                <!--{{ post.summary|raw }}-->
-                <!--<h2 class="uk-heading-bullet">{{ post.title }}</h2>-->
-                <!--{% component 'blogPost' %}-->
-            <!--{% endif %}-->
-        <!--{% endif %}-->
-    </div>
+    
 </div>
