--- a/pages/produk-dan-layanan.htm
+++ b/pages/produk-dan-layanan.htm
@@ -83,9 +83,11 @@ postPage = "produk-dan-layanan"
                                 {% endif %}
                                 </div>
                             </div>
-                            <div class="uk-card-footer">
+                            <div class="uk-card-body">
                                 {{post.summary | raw}}
-                                <p><a href="{{('/produk-dan-layanan/'~post.slug)|app}}">Selengkapnya</a> </p>
+                            </div>
+                            <div class="uk-card-footer">
+                                <p><a class="uk-button uk-button-primary tm-button-primary" href="{{('/produk-dan-layanan/'~post.slug)|app}}">Selengkapnya</a> </p>
                             </div>
                         </div>
                     </div>
