404, error and maintenance page

--- a/pages/404.htm
+++ b/pages/404.htm
@@ -1,7 +1,15 @@
 title = "Sorry, your request cannot be processed"
 url = "/404"
-layout = "default"
+layout = "message"
 description = "Error file not found 404"
+meta_title = 404
+meta_description = 404
 is_hidden = 0
 ==
-Error 404: File not found
+<div class="uk-section uk-section-muted uk-section-large uk-height-viewport">
+    <div class="uk-container uk-text-center">
+        <div class="uk-heading-hero">404</div>
+        <p>Maaf, request anda tidak dapat diproses</p>
+        <a href="{{'/'|app}}" class="uk-button uk-button-primary tm-button-primary uk-light">Home</a>
+    </div>
+</div>
