--- a/pages/maintenance.htm
+++ b/pages/maintenance.htm
@@ -1,6 +1,14 @@
 title = "Maintenance"
 url = "/maintenance"
+layout = "message"
 description = "Maintenance page"
+meta_title = "Maintenance"
+meta_description = "Maintenance"
 is_hidden = 0
 ==
-Maintenance page
+<div class="uk-section uk-section-muted uk-section-large uk-height-viewport">
+    <div class="uk-container uk-text-center">
+        <div class="uk-heading-hero">Maintenance</div>
+        <p>Maaf, sistem tidak dapat diakses untuk saat ini. Silakan kembali di lain waktu.</p>
+    </div>
+</div>
