--- a/pages/error.htm
+++ b/pages/error.htm
@@ -1,7 +1,15 @@
 title = "Something happaned"
 url = "/error"
-layout = "default"
+layout = "message"
 description = "Something happaned"
+meta_title = "Error"
+meta_description = "Error"
 is_hidden = 0
 ==
-Something happaned
+<div class="uk-section uk-section-muted uk-section-large uk-height-viewport">
+    <div class="uk-container uk-text-center">
+        <div class="uk-heading-hero">500</div>
+        <p>Maaf, request anda tidak dapat diproses</p>
+        <a href="{{'/'|app}}" class="uk-button uk-button-primary tm-button-primary uk-light">Home</a>
+    </div>
+</div>
